--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,36 +1,128 @@
-name: Build OpenWrt for BPI-R4
+name: BPI-R4 snapshot + mtk feed (non-poe)
 
 on:
   workflow_dispatch:
+
+env:
+  REMOTE_REPOSITORY: openwrt/openwrt
+  REMOTE_BRANCH: master
+  RELEASE_PREFIX: Mediatek_mt7988a_bpi-r4_snapshot
+  DEVICE_CONFIG: configs/bpi-r4-non-poe.config
 
 jobs:
   build:
     runs-on: ubuntu-24.04
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      ########################################
+      # DEPENDENCIAS HOST
+      ########################################
+      - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-            gettext git libncurses5-dev libssl-dev python3-setuptools swig unzip zlib1g-dev \
-            file wget dos2unix rsync
+          sudo apt install -y \
+            build-essential gawk gcc-multilib g++-multilib git \
+            libncurses-dev zlib1g-dev unzip file wget swig \
+            python3-setuptools rsync gettext zstd curl
 
-      - name: Clone OpenWrt Build Repo
+      ########################################
+      # CHECKOUT OPENWRT SNAPSHOT
+      ########################################
+      - name: Checkout OpenWrt snapshot
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.REMOTE_REPOSITORY }}
+          ref: ${{ env.REMOTE_BRANCH }}
+
+      ########################################
+      # FEED MEDIATEK SNAPSHOT
+      ########################################
+      - name: Clone Mediatek feed
+        run: git clone https://git01.mediatek.com/openwrt/feeds/mtk-openwrt-feeds mtk-openwrt-feeds
+
+      # FIX: evitar que sobrescriba feeds.conf en snapshot
+      - name: Fix Mediatek rules
         run: |
-          git clone https://github.com/Gilly1970/BPI-R4_OpenWrt_mtk-feeds_Build.git
-          sudo chmod 775 -R BPI-R4_OpenWrt_mtk-feeds_Build
+          sed -i 's/update_feeds/install_feeds/g' mtk-openwrt-feeds/autobuild/unified/rules
 
-      - name: Run build script
+      - name: Run Mediatek prepare (snapshot mode)
         run: |
-          cd BPI-R4_OpenWrt_mtk-feeds_Build
-          chmod +x mtk-openwrt_build.sh
-          ./mtk-openwrt_build.sh
+          bash ./mtk-openwrt-feeds/autobuild/unified/autobuild.sh \
+            filogic-mac80211-mt7988_rfb-mt7996 prepare log_file=make
 
-      - name: Upload build artifacts
+      ########################################
+      # CONFIGURACIÓN — BPI-R4 NON-POE
+      ########################################
+      - name: Apply base .config (non-poe)
+        run: |
+          cp ${{ env.DEVICE_CONFIG }} .config
+
+      - name: First defconfig
+        run: make defconfig
+
+      ########################################
+      # FIXES DE KERNEL MEDIATEK
+      ########################################
+      - name: Apply kernel fixes
+        run: |
+          KCFG="target/linux/mediatek/filogic/config-6.6"
+          echo 'CONFIG_PINCTRL_MT7987=y' >> $KCFG
+          echo 'CONFIG_COMMON_CLK_MT7987=y' >> $KCFG
+          echo 'CONFIG_MEDIATEK_NETSYS_V2=y' >> $KCFG
+          echo 'CONFIG_MEDIATEK_NETSYS_V3=y' >> $KCFG
+          echo 'CONFIG_MTK_SCP=n' >> $KCFG
+          echo 'CONFIG_REMOTEPROC_CDEV=n' >> $KCFG
+          echo 'CONFIG_VIRTIO_BLK=n' >> $KCFG
+          echo 'CONFIG_VIRTIO_NET=n' >> $KCFG
+          sed -i '/CONFIG_EXTRA_FIRMWARE/d' $KCFG
+          sed -i '/CONFIG_EXTRA_FIRMWARE_DIR/d' $KCFG
+
+      ########################################
+      # PARCHE MT76 EEPROM
+      ########################################
+      - name: Patch mt76 EEPROM
+        run: |
+          mkdir -p package/kernel/mt76/patches
+          curl -SL https://github.com/openwrt/mt76/commit/8088940ffd047a6d282a95af829562e8038f5b2d.patch \
+            > package/kernel/mt76/patches/001-eeprom-fix.patch
+
+      ########################################
+      # SEGUNDO DEFCONFIG
+      ########################################
+      - name: Second defconfig
+        run: make defconfig
+
+      ########################################
+      # LIMPIEZA DE TOOLCHAIN (evita fallos de openssl host)
+      ########################################
+      - name: Clean toolchain to avoid OpenSSL host issues
+        run: |
+          make tools/clean
+          make toolchain/clean
+          make package/openssl/host/clean
+          make package/ncurses/host/clean
+
+      ########################################
+      # COMPILACIÓN FINAL
+      ########################################
+      - name: Build firmware (snapshot)
+        run: make -j$(nproc) download world
+
+      ########################################
+      # EMPAQUETADO
+      ########################################
+      - name: Compress packages
+        run: tar caf bin/targets/mediatek/filogic/packages.tar.gz bin/targets/mediatek/filogic/packages
+
+      - name: Package output
+        run: tar -cvf bpi_r4-images.tar bin/targets/mediatek/filogic
+
+      - name: Save config
+        run: cp .config bin/targets/mediatek/filogic/config-full
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: openwrt-output
-          path: BPI-R4_OpenWrt_mtk-feeds_Build/bin/
+          name: bpi_r4-snapshot-images
+          path: bpi_r4-images.tar
